<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <!-- SNS share -->
    <string name="sns_sina">新浪微博</string>
    <string name="sns_renren">人人网</string>
    <string name="sns_qzone">Qzone</string>
    <string name="sns_tqq">腾讯微博</string>
    <string name="share_to">分享到:</string>
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败，请重新绑定</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="account_progress">账号完整度 %1$s%%</string>
    <string name="choose_share_platform_tip">请选择分享到的地方</string>
    <string name="unknown_app">未知应用</string>
    <string name="app_name">test</string>
    <string name="detail_dialog_hint">说点什么吧？</string>
    <string name="share_dialog_title">分享到社交网络</string>
    <string name="share_sucess">分享成功</string>
    <string name="share_failure">分享失败</string>
    <string name="share_expired">绑定已失效，请重新绑定</string>
  
</resources>
